# socket-chat

./: CMakeLists.txt  README.md  client.cpp  server.cpp
socket/: client_socket.cpp  client_socket.h  server_socket.cpp  server_socket.h  socket.cpp  socket.h
utility/: logger.cpp  logger.h  singleton.hpp
